--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   connectivity_plus: ^2.0.2
   shared_preferences: ^2.0.7
   flutter_overlay_loader: ^1.0.3
-  country_code_picker: ^2.0.2
+  country_picker: 
   flutter_svg_icons: ^0.0.1+3
   cached_network_image: ^3.1.0
+  go_router:
+  flutter_riverpod:
 
 
 dev_dependencies:
